<resources>
    <string name="server_client_id" translatable="false">994316621617-fe0h6oa4mk89d6ts5mgse0n8jpborcvf.apps.googleusercontent.com</string>
    <string name="app_name">Flash Food</string>
    <string name="hello">Hello</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_fb">Sign in with Facebook</string>
    <string name="sign_in_gg">Sign in with Google</string>
    <string name="sign_in_phone">Sign in with phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="use_phone_number_register">To use your phone number to register</string>
    <string name="continue_word">Continue</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="not_otp">Have you received OTP code?</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="notify_phone_number">Phone number must be 10 characters</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="order">Order</string>
    <string name="notifications">Notification</string>
    <string name="setting">Setting</string>
    <string name="notify_sign_out">Sign Out Success</string>
    <string name="label_address">Address</string>
    <string name="search">Search for food, drinks and everything</string>
    <string name="dish_rice">Rice</string>
    <string name="dish_snacks">Snacks</string>
    <string name="dish_drinks">Drinks</string>
    <string name="dish_soup">Soup</string>
    <string name="dish_sale">Sale</string>
    <string name="dish_free_ship">Free ship</string>
    <string name="big_sale">Big Sale</string>
    <string name="view_more">View more</string>
    <string name="recommend">Recommend</string>
    <string name="recent">Recent</string>
    <string name="menu">Menu</string>
    <string name="sold">sold</string>
    <string name="like">like</string>
    <string name="address_delivery">Address delivery</string>
    <string name="order_detail">Order detail</string>
    <string name="price">Price</string>
    <string name="ship_fee">Ship fee</string>
    <string name="total">Total</string>
    <string name="orderModel">Order</string>
    <string name="waiting_dish">Waiting dish</string>
    <string name="process_order">Process order</string>
    <string name="shipping">Shipping</string>
    <string name="arrived">Arrived</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="notify_invalid_order">You have not selected any dishes yet?</string>
    <string name="notify_invalid_address">You have not entered a shipping address</string>
    <string name="from_date">From date:</string>
    <string name="to_date">To date:</string>
    <string name="edit_location">Edit location</string>
    <string name="cancel">Cancel</string>
    <string name="shipper_info">Shipper infomation</string>
    <string name="option">Option</string>
    <string name="number">Number</string>
    <string name="add_cart">Add cart</string>
    <string name="rate_merchant">Rate merchant</string>
    <string name="rate_shipper">Rate shipper</string>
    <string name="rate">Rate</string>
    <string name="enter_rating">Enter rating...</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_maps_key">AIzaSyDfKWLY_urTP9S2ThbIqobe70IBZZ6MZXI</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="zalo_pay">ZaloPay</string>
    <string name="enter_message">Enter your message...</string>
    <string name="notify_no_fee_ship">Fee ship has not loaded</string>
    <string name="review">Review</string>
    <string name="merchant_partner">Merchant partner</string>
    <string name="send_complain">Send complain</string>
    <string name="notify_exit">Press back again to exit</string>
</resources>