<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_rate_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_shipper"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyle"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:numStars="5"
        android:rating="3"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/edt_rating"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/enter_rating"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:paddingStart="5dp"
        android:background="@drawable/bg_btn_transparent"
        android:textSize="20sp"
        android:maxLines="2"/>

    <Button
        android:id="@+id/btn_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/rate"
        android:textSize="16sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_btn_cancel"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textColor="@color/white" />
</LinearLayout>