<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/shape_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/img_shape" />

    <ImageView
        android:id="@+id/slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-40dp"
        app:srcCompat="@drawable/img_slice_2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="27sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="27sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="27sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/sign_in_fb"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_btn_transparent"
        android:text="@string/sign_in_fb"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_facebook"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/sign_in_gg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_btn_transparent"
        android:text="@string/sign_in_gg"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/sign_in_phone_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/sign_in_phone"
        android:textSize="13sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/sign_up"
        android:textSize="13sp"
        android:textColor="@color/white" />
</LinearLayout>