<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_order"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_delivery"
            android:fontFamily="@font/roboto_medium"
            android:textSize="14sp"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/tv_address_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_location"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btn_edit_location"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/edit_location"
            android:background="@drawable/bg_btn_dish"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_medium"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:paddingHorizontal="3dp"
            android:drawableStart="@drawable/ic_edit"
            android:drawablePadding="2dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@color/grey"/>

        <ListView
            android:id="@+id/lv_dish_order"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginVertical="10dp"
            android:scrollbars="none"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@color/grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_detail"
                android:fontFamily="@font/roboto_medium"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/price"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingVertical="3dip"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/tv_price"
                        android:text="35.000"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:padding="3dip"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ship_fee"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingVertical="3dip"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_ship_fee"
                        android:text="10.000đ"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:textAlignment="textEnd"
                        android:padding="3dip"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>

                <View
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/grey"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_bold"
                        android:paddingVertical="3dip"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_total"
                        android:text="40.000"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_alignParentEnd="true"
                        android:padding="3dip" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderModel"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_btn_primary"/>
</RelativeLayout>