<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/shape_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/img_shape" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:background="@drawable/bg_btn_back"
        android:scaleType="fitStart"
        android:src="@drawable/ic_back"
        android:padding="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-140dp"/>

    <ImageView
        android:id="@+id/slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        app:srcCompat="@drawable/img_slice_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="27sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/use_phone_number_register"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_btn_transparent"
        android:textSize="30sp"
        android:textAlignment="center"
        android:maxLength="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/continue_word"
        android:textSize="13sp"
        android:textColor="@color/white" />
</LinearLayout>