<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <ImageView
        android:id="@+id/shape_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/img_shape" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:background="@drawable/bg_btn_back"
        android:scaleType="fitStart"
        android:src="@drawable/ic_back"
        android:padding="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-140dp"/>

    <ImageView
        android:id="@+id/slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        app:srcCompat="@drawable/img_slice_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm_otp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="27sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_otp"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resend"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_resend"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="-50dp"
            android:background="@drawable/bg_btn_back"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_otp1"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_transparent"
            android:textSize="30sp"
            android:layout_marginHorizontal="5dp"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="number" />

        <EditText
            android:id="@+id/edt_otp2"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_transparent"
            android:textSize="30sp"
            android:layout_marginHorizontal="5dp"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="number" />

        <EditText
            android:id="@+id/edt_otp3"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_transparent"
            android:textSize="30sp"
            android:layout_marginHorizontal="5dp"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="number" />

        <EditText
            android:id="@+id/edt_otp4"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_transparent"
            android:textSize="30sp"
            android:layout_marginHorizontal="5dp"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/confirm"
        android:textSize="13sp"
        android:textColor="@color/white" />
</LinearLayout>