<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_option_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option"
        android:textSize="23sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <ScrollView
        android:layout_below="@+id/tv_option_title"
        android:layout_above="@id/ln_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:id="@+id/layout_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ln_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">
                <ImageButton
                    android:id="@+id/btn_decrease"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_decrease"
                    android:scaleType="center"
                    android:background="@drawable/bg_btn_add_card"
                    android:layout_toStartOf="@id/tv_num_dish"/>
                <TextView
                    android:id="@+id/tv_num_dish"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:layout_toStartOf="@id/btn_increase"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"/>
                <ImageButton
                    android:id="@+id/btn_increase"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_increase"
                    android:scaleType="center"
                    android:background="@drawable/bg_btn_add_card"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_add_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_cart"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn_primary"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"/>
    </LinearLayout>

</RelativeLayout>